--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
 		"gray-matter": "^4.0.3",
 		"next": "^10.0.0",
 		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"styled-components": "^5.3.0"
+		"react-dom": "17.0.1"
 	},
 	"devDependencies": {
+		"@types/next": "^9.0.0",
 		"@types/node": "^15.0.2",
 		"@types/react": "^17.0.5",
-		"@types/styled-components": "^5.1.9",
 		"typescript": "^4.2.4"
 	}
 }
