--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"date-fns": "^2.21.2",
 		"gray-matter": "^4.0.3",
 		"next": "^10.0.0",
 		"react": "17.0.1",
-		"react-dom": "17.0.1"
+		"react-dom": "17.0.1",
+		"sass": "^1.32.12",
+		"swr": "^0.5.6"
 	},
 	"devDependencies": {
 		"@types/next": "^9.0.0",
